<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart= "8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="10dp"
    tools:context="ca.lukeharper.camp.campapp.ProfileActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_activity_firstname_label"
        android:ems="10"
        android:id="@+id/fnLabel"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="0dp"
        android:layout_marginStart="25dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="User's First Name"
        android:textSize="25sp"
        android:ems="10"
        android:id="@+id/userFN"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/fnLabel"
        app:layout_constraintTop_toBottomOf="@+id/fnLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/fnLabel" />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_activity_lastname_label"
        android:ems="10"
        android:id="@+id/lnLabel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/fnLabel"
        app:layout_constraintTop_toBottomOf="@+id/userFN"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/fnLabel" />
    <TextView
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="User's Last Name"
        android:ems="10"
        android:id="@+id/userLN"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lnLabel"
        app:layout_constraintTop_toBottomOf="@+id/lnLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lnLabel" />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_activity_role_label"
        android:ems="10"
        android:id="@+id/roleLabel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/fnLabel"
        app:layout_constraintTop_toBottomOf="@+id/userLN"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/fnLabel" />
    <TextView
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="User's Role"
        android:ems="10"
        android:id="@+id/userRole"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/roleLabel"
        app:layout_constraintTop_toBottomOf="@+id/roleLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/roleLabel" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Groups"
        android:onClick="viewGroups"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/userRole"
        app:layout_constraintTop_toBottomOf="@+id/userRole"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/fnLabel" />

</android.support.constraint.ConstraintLayout>
